improve svelte ignore

--- a/.gitignore.tmpl
+++ b/.gitignore.tmpl
@@ -1,12 +1,23 @@
-build/bin
+!.env.example
 .DS_Store
-node_modules
-frontend/build
-frontend/dist
-frontend/.svelte-kit
-/package
 .env
 .env.*
-!.env.example
+.idea/
+.pnpm-debug.log
+.svelte-kit
+.test-tmp
+/package
+build/bin
+documentation/types.js
+frontend/.svelte-kit
+frontend/build
+frontend/dist
+node_modules
+package-lock.json
+packages/create-svelte/template/CHANGELOG.md
+packages/package/test/**/package
+symlink-from
+test-results/
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+yarn.lock
