improve go ignore

--- a/.gitignore.tmpl
+++ b/.gitignore.tmpl
@@ -6,12 +6,20 @@
 .pnpm-debug.log
 .svelte-kit
 .test-tmp
+*.dll
+*.dylib
+*.exe
+*.exe~
+*.out
+*.so
+*.test
 /package
 build/bin
 documentation/types.js
 frontend/.svelte-kit
 frontend/build
 frontend/dist
+go.work
 node_modules
 package-lock.json
 packages/create-svelte/template/CHANGELOG.md
